welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:2: error: '=' expected but ';' found.
var tour;
        ^Runner:3: error: '=' expected but ';' found.
var partie;
          ^